--- a/.hintrc
+++ b/.hintrc
@@ -13,7 +13,8 @@
     "axe/forms": [
       "default",
       {
-        "label": "off"
+        "label": "off",
+        "select-name": "off"
       }
     ],
     "meta-viewport": "off",
